# agents-among-us

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents-among-us-navigator.def  agents-among-us.def  analysis.py  analyze_discussion.py  cache_models.py  classifier.py  environment.yaml  environment_mac.yml  lexical.py  live_map.py  live_state.json  main.py  pyproject.toml  requirements.txt  shapley.py  stats.py  submit_all.sh  submit_games.sh  submit_globus.sh  worker.py
Extra Documents/: notes.txt
agents/: agent_setup.py  base_agent.py  byzantine_agent.py  honest_agent.py
agents-among-us-main/: .gitignore
config/: app_mode.py  cache_models.py  generate_batch_list.py  model_composition.py  prompts.py  settings.py
config/game_configs/: custom_acl_demo.json  custom_config_001.json  custom_config_002.json  custom_demo-test-2.json  custom_design_001.json  custom_design_002.json  custom_design_003.json  custom_discussion_chat_test_004.json  custom_discussion_chat_test_005.json  (+90 more)
container/: agents-among-us.container  build-apptainer.sh  build-navigator.sh  build-podman.sh  pubapps-deploy.sh  run-apptainer.sh  run-podman.sh
core/: api_clients.py  game_engine.py  globus_compute.py  llm.py  logger.py  simulation.py  state.py  stopwords.py
data/: analysis.py  database.py
data/database/: dim_agent.csv  (+7 more)
docs/: architecture.md
frontend/: Untitled  app.py  test_integration.py
game/: game_engine.py  game_loopv1.py  game_loopv2.py  game_loopv3.py
results/: action_analysis.py  classifier.py  context_pruner.py  discussions.py
web_app/: web_app.py
(+69 files in other folders)
