[project]
name = "agents-among-us"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "numpy>=2.0.2",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.3",
    "joblib>=1.4.2",
    "nltk>=3.9.1",
    "matplotlib>=3.9.3",
    "pillow>=11.0.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.2",
    "loguru>=0.7.3",
    "transformers>=4.47.0",
    "accelerate>=1.2.1",
    "safetensors>=0.4.5",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.0",
    "huggingface-hub>=0.27.0",
    "datasets>=3.2.0",
    "peft>=0.14.0",
]

[project.optional-dependencies]
api = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "python-dotenv>=1.0.0",
]
gpu = [
    "torch>=2.9.1; sys_platform == 'linux'",
    "torchvision>=0.24.1; sys_platform == 'linux'",
    "torchaudio>=2.9.1; sys_platform == 'linux'",
    "bitsandbytes>=0.45.0; sys_platform == 'linux'",
]

[tool.uv]
# Resolve for both macOS (no GPU) and Linux (CUDA GPU)
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

# PyTorch CUDA wheels require the custom index
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
